Add some motivation

--- a/src/themes/slides_theme.scss
+++ b/src/themes/slides_theme.scss
@@ -112,6 +112,12 @@ $presentation-title-slide-text-align: left;
   margin-bottom: 10px;
 }
 
+.left-color {
+  border-left: 6px solid $accent;
+  padding-left: 20px; 
+  margin-top: 15px;
+}
+
 // lists
  
 // Unordered lists
