Add more on evaluation methods

--- a/src/themes/slides_theme.scss
+++ b/src/themes/slides_theme.scss
@@ -118,6 +118,10 @@ $presentation-title-slide-text-align: left;
   margin-top: 15px;
 }
 
+.center-slide {
+    text-align: center;
+}
+
 // lists
  
 // Unordered lists
